# ray-tracing

./: .clang-format  CMakeLists.txt  README.md  compile_and_run.sh  main.cc
src/: camera.h  color.h  common.h  hittable.h  hittable_list.h  interval.h  ray.h  sphere.h  vec3.h
